[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "dags"
description = "Tools to create executable dags from interdependent functions."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = []
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "flatten-dict",
  "networkx>=3.6",
]
[[project.authors]]
name = "Janoś Gabler"
email = "janos.gabler@gmail.com"
[[project.authors]]
name = "Tobias Raabe"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[project.urls]
Github = "https://github.com/OpenSourceEconomics/dags"
Repository = "https://github.com/OpenSourceEconomics/dags"
Tracker = "https://github.com/OpenSourceEconomics/dags/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/dags/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812", # Conflicts with ruff-format
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "FIX002", # Line contains TODO
  "ISC001", # Conflicts with ruff-format
  "TC001",  # Move application import into a type-checking block
  "TC002",  # Move third-party import into a type-checking block
  "TC003",  # Move standard library import into a type-checking block
  "TRY003", # Long messages outside exception class
  "ANN401",
  "FA100",
  "FA102",
]
per-file-ignores."docs/**/*" = [
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ARG001",
  "D100",
  "D103",
  "D104",
  "T201",
]
per-file-ignores."src/dags/tree/__init__.py" = [ "RUF022" ]
per-file-ignores."tests/*" = [
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "D100",
  "D103",
  "D104",
  "D401",
  "FBT001",
  "INP001",
  "PLC2401",
  "PLR2004",
  "S101",
]
per-file-ignores."tests/test_dag.py" = [ "ARG001" ]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.pytask", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.environments",
  "tool.pixi.feature",
  "tool.pixi.feature.docs",
  "tool.pixi.feature.docs.dependencies",
  "tool.pixi.feature.docs.tasks",
  "tool.pixi.feature.py311",
  "tool.pixi.feature.py311.dependencies",
  "tool.pixi.feature.py312",
  "tool.pixi.feature.py312.dependencies",
  "tool.pixi.feature.py313",
  "tool.pixi.feature.py313.dependencies",
  "tool.pixi.feature.py314",
  "tool.pixi.feature.py314.dependencies",
  "tool.pixi.feature.tests",
  "tool.pixi.feature.tests.pypi-dependencies",
  "tool.pixi.feature.tests.tasks",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.pypi-dependencies.dags",
  "tool.pixi.workspace",
]

[tool.pytest]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb" ]
ini_options.filterwarnings = []
ini_options.norecursedirs = [ "docs" ]

[tool.ty]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.invalid-argument-type = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-return-type = "error"
rules.possibly-missing-attribute = "error"
rules.possibly-missing-implicit-call = "error"
rules.possibly-missing-import = "error"
rules.possibly-unresolved-reference = "error"
rules.redundant-cast = "error"
rules.undefined-reveal = "error"
rules.unresolved-global = "error"
rules.unsupported-base = "error"
rules.unused-ignore-comment = "error"
rules.useless-overload-body = "error"
src.exclude = [ "docs/**/*.ipynb" ]

[tool.pixi.dependencies]
jupyterlab = "*"
prek = "*"
python = ">=3.11,<3.15"
[tool.pixi.environments]
docs = [ "docs", "py314" ]
py311 = [ "py311", "tests" ]
py312 = [ "py312", "tests" ]
py313 = [ "py313", "tests" ]
py314 = [ "py314", "tests", "ty-task" ]
[tool.pixi.feature.docs.dependencies]
jupyter-book = ">=2.0"
mystmd = "*"
numpy = "*"
[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "jupyter book build --html --execute", cwd = "docs" }
view-docs = { cmd = "jupyter book start --execute", cwd = "docs" }
[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"
[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
[tool.pixi.feature.tests.dependencies]
numpy = "*"
[tool.pixi.feature.tests.pypi-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
[tool.pixi.feature.tests.tasks]
tests = "pytest"
tests-with-cov = "pytest --cov-report=xml --cov=./"
[tool.pixi.feature.ty-task.pypi-dependencies]
ty = "*"
types-networkx = "*"
[tool.pixi.feature.ty-task.tasks]
ty = "ty check"
[tool.pixi.pypi-dependencies]
dags = { path = ".", editable = true }
pdbp = "*"
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"
