[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "dags"
description = "Tools to create executable dags from interdependent functions."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = []
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "flatten-dict",
  "networkx>=3.6",
]
[[project.authors]]
name = "Janoś Gabler"
email = "janos.gabler@gmail.com"
[[project.authors]]
name = "Tobias Raabe"
[[project.authors]]
name = "Tim Mensinger"
email = "mensingertim@gmail.com"
[[project.authors]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.maintainers]]
name = "Tim Mensinger"
email = "mensingertim@gmail.com"
[project.urls]
Github = "https://github.com/OpenSourceEconomics/dags"
Repository = "https://github.com/OpenSourceEconomics/dags"
Tracker = "https://github.com/OpenSourceEconomics/dags/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/dags/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.pixi.dependencies]
jupyterlab = "*"
prek = "*"
python = ">=3.11,<3.15"
[tool.pixi.environments]
docs = [ "docs", "py314" ]
py311 = [ "py311", "tests" ]
py312 = [ "py312", "tests" ]
py313 = [ "py313", "tests" ]
py314 = [ "py314", "tests", "type-checking" ]
[tool.pixi.feature.docs.dependencies]
jupyter-book = ">=2.0"
mystmd = "*"
numpy = "*"
[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "jupyter book build --html --execute", cwd = "docs" }
view-docs = { cmd = "jupyter book start --execute", cwd = "docs" }
[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"
[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
[tool.pixi.feature.tests.dependencies]
numpy = "*"
[tool.pixi.feature.tests.pypi-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
[tool.pixi.feature.tests.tasks]
tests = "pytest"
tests-with-cov = "pytest --cov-report=xml --cov=./"
[tool.pixi.feature.type-checking.pypi-dependencies]
ty = "*"
types-networkx = "*"
[tool.pixi.feature.type-checking.tasks]
ty = "ty check"
[tool.pixi.pypi-dependencies]
dags = { path = ".", editable = true }
pdbp = "*"
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.ruff]
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812", # Conflicts with ruff-format
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "FIX002", # Line contains TODO
  "ISC001", # Conflicts with ruff-format
  "TC001",  # Move application import into a type-checking block
  "TC002",  # Move third-party import into a type-checking block
  "TC003",  # Move standard library import into a type-checking block
  "TRY003", # Long messages outside exception class
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "FA100",  # Missing from __future__ import annotations
  "FA102",  # Missing from __future__ import annotations
]
per-file-ignores."docs/**/*" = [
  "ANN001", # Missing type annotation for function argument
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "ARG001", # Unused function argument
  "D100",   # Missing docstring in public module
  "D103",   # Missing docstring in public function
  "D104",   # Missing docstring in public package
  "T201",   # print found
]
per-file-ignores."tests/*" = [
  "ANN001",  # Missing type annotation for function argument
  "ANN002",  # Missing type annotation for *args
  "ANN003",  # Missing type annotation for **kwargs
  "ANN201",  # Missing return type annotation for public function
  "ANN202",  # Missing return type annotation for private function
  "D100",    # Missing docstring in public module
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D401",    # First line of docstring should be in imperative mood
  "FBT001",  # Boolean-typed positional argument in function definition
  "INP001",  # Implicit namespace packages
  "PLC2401", # Variable name contains a non-ASCII character
  "PLR2004", # Magic value used in comparison
  "S101",    # Use of assert
]
per-file-ignores."tests/test_dag.py" = [ "ARG001" ]  # Unused function argument
pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.environments",
  "tool.pixi.feature",
  "tool.pixi.feature.docs",
  "tool.pixi.feature.docs.dependencies",
  "tool.pixi.feature.docs.tasks",
  "tool.pixi.feature.py311",
  "tool.pixi.feature.py311.dependencies",
  "tool.pixi.feature.py312",
  "tool.pixi.feature.py312.dependencies",
  "tool.pixi.feature.py313",
  "tool.pixi.feature.py313.dependencies",
  "tool.pixi.feature.py314",
  "tool.pixi.feature.py314.dependencies",
  "tool.pixi.feature.tests",
  "tool.pixi.feature.tests.pypi-dependencies",
  "tool.pixi.feature.tests.tasks",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.pypi-dependencies.dags",
  "tool.pixi.workspace",
]

[tool.ty]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.invalid-argument-type = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-return-type = "error"
rules.possibly-missing-attribute = "error"
rules.possibly-missing-implicit-call = "error"
rules.possibly-missing-import = "error"
rules.possibly-unresolved-reference = "error"
rules.redundant-cast = "error"
rules.undefined-reveal = "error"
rules.unresolved-global = "error"
rules.unsupported-base = "error"
rules.unused-ignore-comment = "error"
rules.useless-overload-body = "error"
src.exclude = [ "docs/**/*.ipynb" ]

[tool.pytest]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb" ]
ini_options.filterwarnings = []
ini_options.norecursedirs = [ "docs" ]

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"
