[metadata]
name = dags
description = Tools to create executable dags from interdependent functions.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/OpenSourceEconomics/dags
author = Janoś Gabler, Tobias Raabe
author_email = janos.gabler@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
install_requires =
    networkx
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/dags/_version.py
